[package]
name = "grapefruit-api"
version = "0.1.0"
authors = ["Colton Hurst <colton@coltonhurst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
